Bug 45473 - [4.6 Regression] ICE: in dfs_walk_once, at cp/search.c:1659
Summary: [4.6 Regression] ICE: in dfs_walk_once, at cp/search.c:1659
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: c++ (show other bugs)
Version: 4.6.0
: P1 normal
Target Milestone: 4.6.0
Assignee: Not yet assigned to anyone
URL:
Keywords: ice-on-valid-code
Depends on:
Blocks:
 
Reported: 2010-09-01 00:32 UTC by Zdenek Sojka
Modified: 2010-11-07 03:38 UTC (History)
3 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail: 4.6.0
Last reconfirmed: 2010-10-28 02:29:37


Attachments
reduced testcase (64 bytes, text/plain)
2010-09-01 00:32 UTC, Zdenek Sojka
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Zdenek Sojka 2010-09-01 00:32:01 UTC
Compiler output:
$ gcc testcase.C
testcase.C:11:8: internal compiler error: in dfs_walk_once, at cp/search.c:1659
Please submit a full bug report,
with preprocessed source if appropriate.
See <http://gcc.gnu.org/bugs.html> for instructions.

Tested revisions:
r163636 - crash
r162940 - crash
r161659 - OK
Comment 1 Zdenek Sojka 2010-09-01 00:32:37 UTC
Created attachment 21631 [details]
reduced testcase
Comment 2 H.J. Lu 2010-09-01 02:29:37 UTC
It is caused by revision 162008:

http://gcc.gnu.org/ml/gcc-cvs/2010-07/msg00362.html
Comment 3 Jason Merrill 2010-11-06 01:44:34 UTC
Author: jason
Date: Sat Nov  6 01:44:31 2010
New Revision: 166391

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=166391
Log:
	PR c++/45473
	* search.c (look_for_overrides): A constructor is never virtual.

Added:
    trunk/gcc/testsuite/g++.dg/inherit/virtual6.C
Modified:
    trunk/gcc/cp/ChangeLog
    trunk/gcc/cp/search.c
    trunk/gcc/testsuite/ChangeLog
Comment 4 Jason Merrill 2010-11-07 03:38:14 UTC
Fixed.