re PR c++/45473 (ICE: in dfs_walk_once, at cp/search.c:1659)

PR c++/45473
	* search.c (look_for_overrides): A constructor is never virtual.

From-SVN: r166391