gcc/testsuite/g++.dg/inherit/virtual6.C
@@ -1,0 +1,15 @@
+// PR c++/45473
+
+struct A
+{
+  virtual void B ();
+};
+
+struct B : A
+{
+  B ();
+};
+
+struct C : B
+{
+};
